# tweevoortwaalf

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  gameplay.ipynb  pyproject.toml  woordraderanalysis.ipynb  wordanalysis.ipynb
analysis/: modelbuilderpaardensprong.py  modelbuilding.ipynb  paardenspronganalysis.ipynb  taartpuzzelanalysis.ipynb  woordraderanalysis.ipynb  wordanalysis.ipynb
static/css/: index.css  small_puzzles.css  style.css  taartpuzzel.css
static/js/: main.js  paardensprong.js  smallpuzzles.js  woordrader.js
templates/: base.html  base_small_puzzles.html  index.html  paardensprong.html  paardensprongspecific.html  taartpuzzel.html  taartpuzzelspecific.html  woordrader.html  woordraderspecific.html
tweevoortwaalf/: app.py  paardensprong.py  puzzleimages.py  suitablewordselection.py  taartpuzzel.py  woordpuzzel.py  woordrader.py
tweevoortwaalf/DDL/: ddl.sql  delete_all_tables.sql  paardensprong.sql  taartpuzzel.sql  woordrader.sql
tweevoortwaalf/Data/: suitable_12_letter_words.txt  suitable_8_letter_words.txt  suitable_9_letter_words.txt
tweevoortwaalf/templates/: index.html
