[project]
name = "twee_voor_twaalf"
version = "0.1.0"
description = "Play all word games from the dutch game show Twee Voor Twaalf."
authors = [{name ="Sjoerd Cornelissen"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask~=3.0.3",
    "gunicorn~=22.0.0",
    "pandas~=2.2.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tweevoortwaalf"]

[tool.setuptools.package-data]
"tweevoortwaalf" = ["Data/wordlist.csv"]
