[project]
name = "twee_voor_twaalf"
version = "0.1.0"
description = "Play all word games from the dutch game show Twee Voor Twaalf."
authors = [{name ="Sjoerd Cornelissen"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask~=3.0.3",
    "gunicorn~=22.0.0",
    "pandas~=2.2.2",
    "python-dotenv~=1.0.1",
    "psycopg~=3.2.1",
    ]

[project.optional-dependencies]
analysis = ["scikit-learn~=1.5.1", "numpy~=2.0.0", "ipykernel~=6.29.5", "matplotlib~=3.9.1"]
dev = ["pre-commit~=3.7.1", "black~=24.4.2", "pylint~=3.2.5", "isort~=5.13.2"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tweevoortwaalf"]

[tool.setuptools.package-data]
"tweevoortwaalf" = ["Data/wordlist.csv"]
